tests/neg/Client.hs
module Client where

import Lib

import LibSpec 

bar = foo 1

